# nedo3_demo

./: README.md
nedo3_bringup/: CMakeLists.txt  package.xml
nedo3_bringup/config/: gazebo_controllers.yaml
nedo3_bringup/launch/: ar_track.launch  ar_track_and_pickandplace.launch  load_robot_description.launch  nedo3_bringup.launch
nedo3_description/: CMakeLists.txt  README.md  package.xml
nedo3_description/config/: .#showcase.yaml  box_props.yaml  part_props.yaml  rack_props.yaml
nedo3_description/media/materials/scripts/: nedo3.material
nedo3_description/meshes/: rack_b.stl
nedo3_description/meshes/collision/: rack_b.stl  rack_t.stl
nedo3_description/meshes/visual/: rack_t.stl
nedo3_description/urdf/: floor.urdf  floor.urdf.xacro  mybox.urdf.xacro  nedo3_demo.urdf.xacro  parts_box.urdf.xacro  put_boxes_on_racks.urdf.xacro  rack_b.urdf  rack_b.urdf.xacro  rack_t.urdf  rack_t.urdf.xacro  table.urdf.xacro
nedo3_moveit_config/: .setup_assistant  .setup_assistant~  CMakeLists.txt  package.xml
nedo3_moveit_config/config/: fake_controllers.yaml  fake_controllers.yaml~  gazebo_nedo3_demo.urdf  gazebo_showcase.urdf  joint_limits.yaml  nedo3_demo.srdf  nedo3_demo.srdf~  ros_controllers.yaml  ros_controllers.yaml~  simple_moveit_controllers.yaml
nedo3_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  nedo3_demo_moveit_controller_manager.launch.xml  ompl-chomp_planning_pipeline.launch.xml  planning_context.launch  (+8 more)
